langtools/test/tools/javac/annotations/typeAnnotations/failures/AnnotatedClassExpr.out
AnnotatedClassExpr.java:12:29: compiler.err.no.annotations.on.dot.class
1 error
